[gd_scene load_steps=36 format=2]

[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_3.png" type="Texture" id=1]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_1.png" type="Texture" id=2]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_attack_2.png" type="Texture" id=3]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_idle_2.png" type="Texture" id=4]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_2.png" type="Texture" id=5]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_attack_2.png" type="Texture" id=6]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_idle_1.png" type="Texture" id=7]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_walk_2.png" type="Texture" id=8]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_idle_1.png" type="Texture" id=9]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_attack_1.png" type="Texture" id=10]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_attack_1.png" type="Texture" id=11]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_idle_1.png" type="Texture" id=12]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_walk_1.png" type="Texture" id=13]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_walk_1.png" type="Texture" id=14]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_attack_2.png" type="Texture" id=15]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_walk_1.png" type="Texture" id=16]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_idle_1.png" type="Texture" id=17]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_walk_1.png" type="Texture" id=18]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_attack_1.png" type="Texture" id=19]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_down_walk_2.png" type="Texture" id=20]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_idle_2.png" type="Texture" id=21]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_left_walk_2.png" type="Texture" id=22]
[ext_resource path="res://fonts/Font.tres" type="DynamicFont" id=23]
[ext_resource path="res://enemies/skeleton/Skeleton.gd" type="Script" id=24]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_right_idle_2.png" type="Texture" id=25]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_5.png" type="Texture" id=26]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_attack_1.png" type="Texture" id=27]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_idle_2.png" type="Texture" id=28]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_walk_2.png" type="Texture" id=29]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_4.png" type="Texture" id=30]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_up_attack_2.png" type="Texture" id=31]
[ext_resource path="res://enemies/skeleton/graphics/skeleton_death_6.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "birth",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 32 ) ],
"loop": false,
"name": "death",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 11 ), ExtResource( 3 ) ],
"loop": true,
"name": "down_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "down_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 20 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 15 ) ],
"loop": false,
"name": "left_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 21 ) ],
"loop": true,
"name": "left_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 22 ) ],
"loop": true,
"name": "left_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": false,
"name": "right_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 25 ) ],
"loop": true,
"name": "right_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "right_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 27 ), ExtResource( 31 ) ],
"loop": false,
"name": "up_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 28 ) ],
"loop": true,
"name": "up_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 29 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "down_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="IATimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamageLabel" type="Label" parent="."]
margin_left = -4.0
margin_top = -17.0
margin_right = 4.0
margin_bottom = -7.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 23 )
align = 1
valign = 1

[node name="ShowTimer" type="Timer" parent="DamageLabel"]
one_shot = true

[node name="Tween" type="Tween" parent="DamageLabel"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="IATimer" to="." method="_on_IATimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="DamageLabel/ShowTimer" to="." method="_on_ShowTimer_timeout"]
